<resources>
    <string name="app_name">GEOquiz</string>
    <string name="question_text">Canberra is the capital of Australia.</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="previous_button">Previous</string>
    <string name="cheats_remaining">Cheats Remaining: %d</string>
    <string name="api_level">API Level: </string>
    <string name="quiz_complete">Quiz Complete!</string>
    <string name="score_format">Your Score: %d%%</string>
    <string name="total_score">Total Score: %d / %d</string>
    <string name="question_number">Question %d / %d</string>
</resources>